2012-07-10  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcmysql.c: Fixed a non-static table argument to
			       Tcl_GetIndexFromObjStruct.

2012-06-10  Jan Nijtmans  <jan.nijtmans@gmail.com>

	* configure.in:	Commit log claims this entry is to make TDBC
			API functions MODULE_SCOPE: actual effect appears
			intentionally to disable buildability against Tcl 8.5
			and the TclOO extension.
	* configure:	autoconf-2.59

2012-06-08  Jan Nijtmans  <jan.nijtmans@gmail.com>

	* tclconfig/ChangeLog:
	* tclconfig/tcl.m4:	Update to latest TEA
	* configure:		autoconf-2.59

2011-09-19  Kevin B. Kenny  <kennykb@acm.org>

	* Makefie.in: Added a 'valgrind' rule for memory leak checking.
	* tests/all.tcl: Changed behaviour to 'fall off the end' to
			 facilitate 'valgrind.

2011-07-19  Kevin B. Kenny  <kennykb@acm.org>

	* configure.in:
	* Makefile.in:
	* README:	Advanced version number to 1.0b17.

	* configure: 	autoconf 2.59

2011-07-18  Don Porter  <dgp@users.sourceforge.net>

	* configure.in: Update to latest TEA 3.9 revisions.
	* Makefile.in:
	* tclconfig/*:

	* configure:    autoconf-2.59

2011-02-20  Kevin B. Kenny  <kennykb@acm.org>

	* tests/tdbcmysql.test:
		Added rudimentary test for 'nextresults' - the method
		is a dummy because the calls supported by tdbc::mysql
		do not allow for multiple result sets.

2011-01-26  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc_mysql.n:
	Added empty comment at the start of each manpage because 'man'
	interprets comments there as directives. Thanks to Konstantin
	Kohmoutov for reporting and diagnosing this error.

2011-01-25  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tdbcmysql.c: Fixed a bug in data types of small integers
			       on 64-bit machines. Who would have imagined
			       that MSYQL_TYPE_LONG doesn't mean 'long' but
			       rather 'int'?
	* tests/tdbcmysql.test (tdbc::mysql-1.6,24.[4567]):
		Quieted test cases on 64-bit machines and on MySQL earlier
		than 5.1.16, which is the first version on which